# rust_coder

./: .gitignore  Cargo.toml
app_core/: Cargo.toml
app_core/src/: feedback.rs  ingestion.rs  lib.rs  llm.rs  qdrant.rs  sandbox.rs  web_scraper.rs  web_search.rs
config/: default.toml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
web_server/: Cargo.toml
web_server/src/: docker_manager.rs  main.rs
