[package]
name = "app_core"
version = "0.1.0"
edition = "2024"

[dependencies]
qdrant-client = "1.15.0"
config = { version = "0.15.13", features = ["toml"] }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }
serde = { workspace = true }
tempfile = "3.20.0"
genai = { workspace = true }
