[package]
name = "app_core"
version = "0.1.0"
edition = "2024"

[dependencies]
qdrant-client = "1.15.0"
config = { version = "0.15.13", features = ["toml"] }
tempfile = "3.20.0"

anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }
serde = { workspace = true, features = ["derive"] }
genai = { workspace = true }
text-splitter = { workspace = true }
uuid = { version = "1.9.1", features = ["v4"] }
serde_json = "1.0.141"
fastembed = "4.0.0"
reqwest = { workspace = true, features = ["json"] }
scraper = "0.19.0"
duckduckgo_rs = "0.0.1"
ort = { version = "2.0.0-rc.5", features = ["cuda"]}
regex = "1.11.1"
syn = { version = "2.0.104", features = ["visit", "full"] }