[package]
name = "web_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
app_core = { path = "../app_core" }
dotenv = "0.15.0"
bollard = "0.19.1"
futures-util = "0.3.31"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

axum-extra = { version = "0.10.1", features = ["multipart"] }
pdf-extract = "0.9.0"